feat: added bergoth

--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -42,6 +42,7 @@
     "kreela-witch-arm",
     "kytis",
     "lanakis-the-chosen",
+    "little-miss-annie",
     "lord-shazar",
     "relickeeper",
     "royal-huntsman",
