--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -58,6 +58,7 @@
     "juliana",
     "kael",
     "lanakis-the-chosen",
+    "little-miss-annie",
     "lyssandra",
     "maneater",
     "marksman",
