--- a/docs/champions/current/reinbeast.json
+++ b/docs/champions/current/reinbeast.json
@@ -12,12 +12,12 @@
     "clan_boss_without_giant_slayer": "C",
     "clan_boss_with_giant_slayer": "C",
     "ice_guardian": "B",
-    "dragon": "B",
+    "dragon": "C",
     "spider": "C",
     "fire_knight": "C",
     "minotaur": "S",
-    "force_dungeon": "A",
-    "magic_dungeon": "A",
+    "force_dungeon": "B",
+    "magic_dungeon": "B",
     "spirit_dungeon": "C",
     "void_dungeon": "S",
     "faction_wars": "B"
@@ -64,19 +64,19 @@
     {
       "source": "ayumilove",
       "rating": {
-        "overall": "S",
+        "overall": "A",
         "campaign": "S",
-        "arena_offense": "SS",
-        "arena_defense": "SS",
+        "arena_offense": "S",
+        "arena_defense": "S",
         "clan_boss_without_giant_slayer": "A",
         "clan_boss_with_giant_slayer": "A",
-        "ice_guardian": "SS",
-        "dragon": "SS",
+        "ice_guardian": "S",
+        "dragon": "S",
         "spider": "B",
         "fire_knight": "B",
         "minotaur": "SS",
-        "force_dungeon": "S",
-        "magic_dungeon": "S",
+        "force_dungeon": "A",
+        "magic_dungeon": "A",
         "spirit_dungeon": "C",
         "void_dungeon": "SS",
         "faction_wars": ""
