feat: added images for champions

--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -41,6 +41,7 @@
     "frostskin",
     "gladiator",
     "golden-reaper",
+    "gomlok-skyhide",
     "harvest-jack",
     "head-taker",
     "high-khatun",
