--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -47,6 +47,7 @@
     "foli",
     "frozen-banshee",
     "golden-reaper",
+    "gomlok-skyhide",
     "gorgorab",
     "grohak-the-bloodied",
     "grunch-killjoy",
