fix: updated champion skills

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -49,6 +49,7 @@
     "martyr",
     "narma-the-returned",
     "nazana",
+    "nekhret-the-great",
     "oathbound",
     "paragon",
     "peydma",
