--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -62,6 +62,7 @@
     "templar",
     "tomb-lord",
     "tuhak-the-wanderer",
+    "urost-the-soulcage",
     "ursuga-warcaller",
     "visix-the-unbowed",
     "yakarl-the-scourge"
