--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -21,6 +21,7 @@
     "acolyte",
     "adjudicator",
     "alure",
+    "archmage-hellmut",
     "armiger",
     "basileus-roanas",
     "battle-sister",
@@ -82,6 +83,7 @@
     "tayrel",
     "tomb-lord",
     "ultimate-galek",
+    "urost-the-soulcage",
     "ursine-ironhide",
     "valkyrie",
     "visix-the-unbowed",
