--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -18,6 +18,7 @@
     "Increase C.DMG"
   ],
   "champion_slugs": [
+    "archmage-hellmut",
     "candraphon",
     "cillian-the-lucky",
     "dark-elhain",
