feat: added missing skills

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -18,13 +18,16 @@
   ],
   "champion_slugs": [
     "adriel",
+    "alaric-the-hooded",
     "altan",
     "avir-the-alchemage",
+    "balthus-drauglord",
     "baroth-the-bloodsoaked",
     "bogwalker",
     "coffin-smasher",
     "crimson-helm",
     "crypt-king-graal",
+    "dagger",
     "fayne",
     "ghrush-the-mangler",
     "gladiator",
