--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -28,6 +28,7 @@
     "bystophus",
     "cagebreaker",
     "crypt-witch",
+    "dagger",
     "dark-athel",
     "deathless",
     "defiled-sinner",
@@ -68,6 +69,7 @@
     "robar",
     "rotos-the-lost-groom",
     "royal-guard",
+    "rugnor-goldgleam",
     "sorceress",
     "spider",
     "stag-knight",
