--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -46,6 +46,7 @@
     "lord-shazar",
     "relickeeper",
     "royal-huntsman",
+    "rugnor-goldgleam",
     "saito",
     "seeker",
     "siphi-the-lost-bride",
