--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -22,6 +22,7 @@
     "candraphon",
     "cillian-the-lucky",
     "dark-elhain",
+    "gerhard-the-stone",
     "ma-shalled",
     "saito",
     "suwai-firstborn",
