--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -20,6 +20,7 @@
     "achak-the-wendarin",
     "acolyte",
     "adjudicator",
+    "alaric-the-hooded",
     "alure",
     "archmage-hellmut",
     "armiger",
@@ -31,6 +32,7 @@
     "coldheart",
     "confessor",
     "crimson-slayer",
+    "dagger",
     "diabolist",
     "dunestrider",
     "elegaius",
