feat: added missing skills

--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -20,6 +20,7 @@
     "adriel",
     "alaric-the-hooded",
     "altan",
+    "aox-the-rememberer",
     "avir-the-alchemage",
     "balthus-drauglord",
     "baroth-the-bloodsoaked",
@@ -57,6 +58,7 @@
     "paragon",
     "peydma",
     "rearguard-sergeant",
+    "rector-drath",
     "runic-warder",
     "sentinel",
     "sepulcher-sentinel",
