--- a/docs/status-effects/current/decrease-c-rate-2.json
+++ b/docs/status-effects/current/decrease-c-rate-2.json
@@ -19,6 +19,7 @@
   ],
   "champion_slugs": [
     "akoth-the-seared",
+    "aox-the-rememberer",
     "balthus-drauglord",
     "ursine-icecrusher"
   ]
