--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -37,6 +37,7 @@
     "judge",
     "kantra-the-cyclone",
     "krisk-the-ageless",
+    "kurzad-deepheart",
     "lich",
     "lightsworn",
     "luria",
