--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -22,6 +22,7 @@
     "adjudicator",
     "alaric-the-hooded",
     "alure",
+    "aox-the-rememberer",
     "archmage-hellmut",
     "armiger",
     "basileus-roanas",
@@ -64,6 +65,7 @@
     "nethril",
     "oathbound",
     "outlander",
+    "panthera",
     "paragon",
     "pilgrim",
     "pit-fighter",
