--- a/docs/status-effects/current/increase-def-2.json
+++ b/docs/status-effects/current/increase-def-2.json
@@ -48,6 +48,7 @@
     "steelskull",
     "stoneskin",
     "thenasil",
+    "tigersoul",
     "towering-titan",
     "tyrant-ixlimor",
     "valla",
