--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -62,6 +62,7 @@
     "judge",
     "juliana",
     "kael",
+    "kurzad-deepheart",
     "lanakis-the-chosen",
     "little-miss-annie",
     "lyssandra",
@@ -78,6 +79,7 @@
     "prince-kymar",
     "pyxniel",
     "raglin",
+    "rector-drath",
     "reliquary-tender",
     "rugnor-goldgleam",
     "seeker",
