feat: updated skills

--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -25,6 +25,7 @@
     "aox-the-rememberer",
     "archmage-hellmut",
     "armiger",
+    "azure",
     "basileus-roanas",
     "battle-sister",
     "big-un",
@@ -40,12 +41,14 @@
     "elfguard",
     "excruciator",
     "executioner",
+    "fencer",
     "flesheater",
     "foli",
     "frostskin",
     "gladiator",
     "golden-reaper",
     "gomlok-skyhide",
+    "grohak-the-bloodied",
     "harvest-jack",
     "head-taker",
     "high-khatun",
@@ -86,6 +89,7 @@
     "stitched-beast",
     "tayrel",
     "tomb-lord",
+    "tuhak-the-wanderer",
     "ultimate-galek",
     "urost-the-soulcage",
     "ursala-the-mourner",
@@ -95,6 +99,7 @@
     "wanderer",
     "warlord",
     "wyvernbane",
+    "yakarl-the-scourge",
     "yeoman"
   ]
 }
