fix: skills of armina

--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -25,6 +25,7 @@
     "aox-the-rememberer",
     "archmage-hellmut",
     "armiger",
+    "armina",
     "azure",
     "basileus-roanas",
     "battle-sister",
