fix: added missing skills

--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -21,6 +21,7 @@
     "archmage-hellmut",
     "boltsmith",
     "candraphon",
+    "cardiel",
     "cillian-the-lucky",
     "dark-elhain",
     "fahrakin-the-fat",
