--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -26,6 +26,7 @@
     "archmage-hellmut",
     "armina",
     "astralith",
+    "astralon",
     "avir-the-alchemage",
     "azure",
     "baroth-the-bloodsoaked",
@@ -37,6 +38,7 @@
     "channeler",
     "cillian-the-lucky",
     "commander",
+    "countess-lix",
     "crimson-slayer",
     "dark-elhain",
     "deacon-armstrong",
@@ -50,6 +52,7 @@
     "flailer",
     "foli",
     "frozen-banshee",
+    "godseeker-aniri",
     "golden-reaper",
     "gomlok-skyhide",
     "gorgorab",
