--- a/docs/status-effects/current/decrease-spd-2.json
+++ b/docs/status-effects/current/decrease-spd-2.json
@@ -20,6 +20,7 @@
     "big-un",
     "bloodfeather",
     "cillian-the-lucky",
+    "countess-lix",
     "courtier",
     "crossbowman",
     "dark-athel",
