--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -34,6 +34,7 @@
     "bloodfeather",
     "coldheart",
     "confessor",
+    "countess-lix",
     "crimson-slayer",
     "dagger",
     "deacon-armstrong",
