feat: hellhades ranking

--- a/docs/champions/current/klodd-beastfeeder.json
+++ b/docs/champions/current/klodd-beastfeeder.json
@@ -5,22 +5,22 @@
   "element": "Magic",
   "type": "HP",
   "rating": {
-    "overall": "",
+    "overall": "A",
     "campaign": "",
-    "arena_offense": "",
-    "arena_defense": "",
-    "clan_boss_without_giant_slayer": "",
-    "clan_boss_with_giant_slayer": "",
-    "ice_guardian": "",
-    "dragon": "",
-    "spider": "",
-    "fire_knight": "",
+    "arena_offense": "S",
+    "arena_defense": "S",
+    "clan_boss_without_giant_slayer": "A",
+    "clan_boss_with_giant_slayer": "A",
+    "ice_guardian": "S",
+    "dragon": "A",
+    "spider": "A",
+    "fire_knight": "B",
     "minotaur": "",
     "force_dungeon": "",
     "magic_dungeon": "",
     "spirit_dungeon": "",
     "void_dungeon": "",
-    "faction_wars": ""
+    "faction_wars": "A"
   },
   "reviews": {
     "amount": 0,
@@ -38,7 +38,30 @@
     "spirit_dungeon": 0,
     "void_dungeon": 0
   },
-  "all_ratings": [],
+  "all_ratings": [
+    {
+      "source": "hellhades-tier-list",
+      "rating": {
+        "overall": "A",
+        "campaign": "",
+        "arena_offense": "S",
+        "arena_defense": "S",
+        "clan_boss_without_giant_slayer": "A",
+        "clan_boss_with_giant_slayer": "A",
+        "ice_guardian": "S",
+        "dragon": "A",
+        "spider": "A",
+        "fire_knight": "B",
+        "minotaur": "",
+        "force_dungeon": "",
+        "magic_dungeon": "",
+        "spirit_dungeon": "",
+        "void_dungeon": "",
+        "faction_wars": "A"
+      },
+      "weight": 5
+    }
+  ],
   "slug": "klodd-beastfeeder",
   "characteristics": {
     "60": {
