feat: added giid for champions

--- a/docs/champions/current/klodd-beastfeeder.json
+++ b/docs/champions/current/klodd-beastfeeder.json
@@ -128,10 +128,10 @@
         }
       ],
       "damaged_based_on": [],
-      "giid": "",
+      "giid": "75108111100100326610197115116102101101100101114_s1",
       "cooldown": 0,
       "upgrades": [],
-      "image_slug": "",
+      "image_slug": "e53f2a7d7998e36cea5f07cc1995b2e6",
       "skill_number": "A1"
     },
     {
@@ -162,10 +162,10 @@
         }
       ],
       "damaged_based_on": [],
-      "giid": "",
+      "giid": "75108111100100326610197115116102101101100101114_s2",
       "cooldown": 4,
       "upgrades": [],
-      "image_slug": "",
+      "image_slug": "dc3620adc33ea5feb3cc428ade2ebf31",
       "skill_number": "A2"
     },
     {
@@ -216,10 +216,10 @@
         }
       ],
       "damaged_based_on": [],
-      "giid": "",
+      "giid": "75108111100100326610197115116102101101100101114_s3",
       "cooldown": 5,
       "upgrades": [],
-      "image_slug": "",
+      "image_slug": "32bde089d821247ebc1d1a0b12243a2b",
       "skill_number": "A3"
     },
     {
@@ -229,10 +229,10 @@
       "slug": "delicious-giblets",
       "effects": [],
       "damaged_based_on": [],
-      "giid": "",
+      "giid": "75108111100100326610197115116102101101100101114_s4",
       "cooldown": 0,
       "upgrades": [],
-      "image_slug": "",
+      "image_slug": "cb6e85a9a013891a8c06f74dd2267df8",
       "skill_number": "P1"
     }
   ],
@@ -296,9 +296,9 @@
   "default_description": "Klodd Beastfeeder is a epic hp champion from the faction Ogryn-Tribes doing magic damage",
   "recommended_builds": [],
   "lore": "",
-  "giid": "",
+  "giid": "75108111100100326610197115116102101101100101114",
   "synergy": [],
-  "thumbnail": "unknown",
+  "thumbnail": "b48e460575e9496a16f2fca7de5fff28",
   "tags": [],
   "masteries": [],
   "fusion_data": [],
