--- a/docs/champions/current/scrapper.json
+++ b/docs/champions/current/scrapper.json
@@ -159,9 +159,9 @@
   "default_description": "Scrapper is a rare attack champion from the faction Barbarians doing void damage",
   "recommended_builds": [],
   "lore": "",
-  "giid": "",
+  "giid": "839911497112112101114",
   "synergy": [],
-  "thumbnail": "unknown",
+  "thumbnail": "7ea331e0ede2347926ac27338f652c7a",
   "tags": [],
   "masteries": [
     {
