--- a/docs/status-effects/current/decrease-atk-2.json
+++ b/docs/status-effects/current/decrease-atk-2.json
@@ -70,6 +70,7 @@
     "stag-knight",
     "tayrel",
     "tomb-lord",
+    "toragi-the-frog",
     "ursala-the-mourner",
     "ursine-ironhide",
     "ursuga-warcaller",
