--- a/docs/status-effects/current/decrease-def-2.json
+++ b/docs/status-effects/current/decrease-def-2.json
@@ -41,6 +41,7 @@
     "dilgol",
     "dracomorph",
     "fahrakin-the-fat",
+    "fanatic",
     "fayne",
     "fenax",
     "fleshmonger",
@@ -50,6 +51,7 @@
     "fu-shan",
     "galek",
     "galkut",
+    "genzin",
     "ghostborn",
     "gomlok-skyhide",
     "gravechill-killer",
@@ -57,6 +59,7 @@
     "hexia",
     "hound-spawn",
     "jarang",
+    "jintoro",
     "judge",
     "khoronar",
     "krisk-the-ageless",
@@ -68,6 +71,7 @@
     "militia",
     "miscreated-monster",
     "necrohunter",
+    "oboro",
     "ox",
     "rae",
     "raider",
