--- a/docs/status-effects/current/decrease-turn-meter.json
+++ b/docs/status-effects/current/decrease-turn-meter.json
@@ -32,6 +32,7 @@
     "big-un",
     "blind-seer",
     "bloodfeather",
+    "bloodmask",
     "coldheart",
     "confessor",
     "countess-lix",
@@ -59,9 +60,11 @@
     "hollow",
     "interceptor",
     "jinglehunter",
+    "jintoro",
     "judicator",
     "khoronar",
     "lich",
+    "lifetaker",
     "lightsworn",
     "little-miss-annie",
     "lordly-legionary",
