--- a/docs/status-effects/current/increase-acc-2.json
+++ b/docs/status-effects/current/increase-acc-2.json
@@ -19,6 +19,8 @@
   "champion_slugs": [
     "klodd-beastfeeder",
     "kurzad-deepheart",
-    "stag-knight"
+    "pestilus",
+    "stag-knight",
+    "yoshi-the-drunkard"
   ]
 }
