--- a/docs/status-effects/current/increase-atk-2.json
+++ b/docs/status-effects/current/increase-atk-2.json
@@ -31,6 +31,7 @@
     "doompriest",
     "drokgul-the-gaunt",
     "duchess-lilitu",
+    "fanatic",
     "flesheater",
     "frostbringer",
     "ghostborn",
@@ -52,6 +53,7 @@
     "royal-huntsman",
     "rugnor-goldgleam",
     "runekeeper-dazdurk",
+    "sachi",
     "saito",
     "seeker",
     "siphi-the-lost-bride",
@@ -65,6 +67,7 @@
     "ultimate-galek",
     "ursala-the-mourner",
     "warmaiden",
-    "whisper"
+    "whisper",
+    "yoshi-the-drunkard"
   ]
 }
