--- a/docs/status-effects/current/increase-c-dmg-2.json
+++ b/docs/status-effects/current/increase-c-dmg-2.json
@@ -28,6 +28,8 @@
     "gerhard-the-stone",
     "king-garog",
     "ma-shalled",
+    "oboro",
+    "pestilus",
     "saito",
     "suwai-firstborn",
     "wurlim-frostking"
