--- a/docs/status-effects/current/increase-c-rate-2.json
+++ b/docs/status-effects/current/increase-c-rate-2.json
@@ -39,6 +39,7 @@
     "kreela-witch-arm",
     "lanakis-the-chosen",
     "mausoleum-mage",
+    "oboro",
     "seer",
     "shamrock",
     "siegebreaker",
