--- a/docs/status-effects/current/increase-def.json
+++ b/docs/status-effects/current/increase-def.json
@@ -29,6 +29,7 @@
     "cataphract",
     "centurion",
     "chevalier",
+    "chonoru",
     "crimson-helm",
     "doomscreech",
     "executioner",
