--- a/docs/status-effects/current/increase-turn-meter.json
+++ b/docs/status-effects/current/increase-turn-meter.json
@@ -52,6 +52,7 @@
     "flailer",
     "foli",
     "frozen-banshee",
+    "genzin",
     "godseeker-aniri",
     "golden-reaper",
     "gomlok-skyhide",
@@ -65,6 +66,7 @@
     "hurler",
     "inquisitor-shamael",
     "jinglehunter",
+    "jintoro",
     "judge",
     "juliana",
     "kael",
@@ -83,6 +85,7 @@
     "old-hermit-jorrg",
     "ox",
     "pain-keeper",
+    "pestilus",
     "pitiless-one",
     "prince-kymar",
     "pyxniel",
@@ -92,6 +95,7 @@
     "roxam",
     "rugnor-goldgleam",
     "runekeeper-dazdurk",
+    "sachi",
     "samar-gemcursed",
     "seeker",
     "sethallia",
@@ -121,6 +125,7 @@
     "vrask",
     "wagonbane",
     "wanderer",
-    "yakarl-the-scourge"
+    "yakarl-the-scourge",
+    "yoshi-the-drunkard"
   ]
 }
